@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.action.admin.cluster.snapshots.get;
@@ -18,12 +19,12 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.SnapshotsInProgress;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
+import org.elasticsearch.cluster.metadata.ProjectId;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
+import org.elasticsearch.cluster.project.ProjectResolver;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.collect.Iterators;
-import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.util.concurrent.AbstractThrottledTaskRunner;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
@@ -32,12 +33,14 @@ import org.elasticsearch.common.util.concurrent.ThrottledIterator;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.Predicates;
 import org.elasticsearch.core.Releasable;
+import org.elasticsearch.injection.guice.Inject;
 import org.elasticsearch.logging.LogManager;
 import org.elasticsearch.logging.Logger;
 import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.repositories.RepositoryData;
+import org.elasticsearch.repositories.RepositoryException;
 import org.elasticsearch.repositories.RepositoryMissingException;
 import org.elasticsearch.repositories.ResolvedRepositories;
 import org.elasticsearch.search.sort.SortOrder;
@@ -45,6 +48,7 @@ import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
 import org.elasticsearch.snapshots.SnapshotMissingException;
+import org.elasticsearch.snapshots.SnapshotState;
 import org.elasticsearch.snapshots.SnapshotsService;
 import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
@@ -53,30 +57,67 @@ import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
 import java.util.ArrayList;
-import java.util.Collection;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Queue;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.BiPredicate;
 import java.util.function.BooleanSupplier;
 import java.util.function.Predicate;
-import java.util.function.ToLongFunction;
+
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.EXCLUDE;
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.INCLUDE;
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.INCONCLUSIVE;
 
 /**
- * Transport Action for get snapshots operation
+ * Transport action for get-snapshots API
  */
 public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSnapshotsRequest, GetSnapshotsResponse> {
 
     public static final ActionType<GetSnapshotsResponse> TYPE = new ActionType<>("cluster:admin/snapshot/get");
     private static final Logger logger = LogManager.getLogger(TransportGetSnapshotsAction.class);
 
+    private static final EnumSet<SnapshotState> COMPLETED_STATES = EnumSet.copyOf(
+        Arrays.stream(SnapshotState.values()).filter(SnapshotState::completed).toList()
+    );
+
     private final RepositoriesService repositoriesService;
+    private final ProjectResolver projectResolver;
+
+    /*
+     * [NOTE ON THREADING]
+     *
+     * This action runs three kinds of task:
+     *
+     * 1. looping through all the SnapshotInfo instances that we can construct from in-memory data (in-progress snapshots and the
+     * verbose=false case), adding them to the results.
+     * 2. adding each remaining SnapshotInfo instance to the results after loading it from the repository.
+     * 3. processing the results into the final response.
+     *
+     * It uses two pools:
+     *
+     * SNAPSHOT_META:: Intended for loading metadata from the repository. Fairly large, so not appropriate for CPU-intensive tasks. Also
+     * used by other snapshot operations so we must not use it for long-running work or spam its queue. This is used only for the type-2
+     * tasks above, since it's the pool that loads the SnapshotInfo from the repository in the first place, and we avoid spamming its
+     * queue for those tasks with GetSnapshotInfoExecutor.
+     *
+     * MANAGEMENT:: Intended for other management-related work. Small, and not used for critical production activities, so it's ok to do
+     * long-running or CPU-intensive things here. This is used for type-1 and type-3 tasks which both loop over many SnapshotInfo instances
+     * at once.
+     *
+     * The mechanism for achieving this threading model is a little subtle. We start processing each repository on MANAGEMENT either because
+     * that's where masterOperation() runs or because we fork back to MANAGEMENT after getRepositoryData(). We then iterate over the
+     * in-memory SnapshotInfo instances first, without any further forking, and only once that's complete do we start to retrieve
+     * SnapshotInfo data from the repository which forks the per-blob tasks to SNAPSHOT_META. It's important that we don't do any more
+     * non-forking iteration once we've started this forking phase, because if we did then those non-forked items would all be processed in
+     * a single task on the SNAPSHOT_META pool. Once all the per-repository iteration is complete, we fork back to MANAGEMENT to build the
+     * final results.
+     */
 
     @Inject
     public TransportGetSnapshotsAction(
@@ -85,7 +126,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         ThreadPool threadPool,
         RepositoriesService repositoriesService,
         ActionFilters actionFilters,
-        IndexNameExpressionResolver indexNameExpressionResolver
+        ProjectResolver projectResolver
     ) {
         super(
             TYPE.name(),
@@ -94,21 +135,16 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             threadPool,
             actionFilters,
             GetSnapshotsRequest::new,
-            indexNameExpressionResolver,
             GetSnapshotsResponse::new,
-            // Execute this on the management pool because creating the response can become fairly expensive
-            // for large repositories in the verbose=false case when there are a lot of indices per snapshot.
-            // This is intentionally not using the snapshot_meta pool because that pool is sized rather large
-            // to accommodate concurrent IO and could consume excessive CPU resources through concurrent
-            // verbose=false requests that are CPU bound only.
-            threadPool.executor(ThreadPool.Names.MANAGEMENT)
+            threadPool.executor(ThreadPool.Names.MANAGEMENT) // see [NOTE ON THREADING]
         );
         this.repositoriesService = repositoriesService;
+        this.projectResolver = projectResolver;
     }
 
     @Override
     protected ClusterBlockException checkBlock(GetSnapshotsRequest request, ClusterState state) {
-        return state.blocks().globalBlockedException(ClusterBlockLevel.METADATA_READ);
+        return state.blocks().globalBlockedException(projectResolver.getProjectId(), ClusterBlockLevel.METADATA_READ);
     }
 
     @Override
@@ -120,13 +156,15 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
     ) {
         assert task instanceof CancellableTask : task + " not cancellable";
 
-        final var resolvedRepositories = ResolvedRepositories.resolve(state, request.repositories());
+        final var projectId = projectResolver.getProjectId();
+        final var resolvedRepositories = ResolvedRepositories.resolve(state.metadata().getProject(projectId), request.repositories());
         if (resolvedRepositories.hasMissingRepositories()) {
             throw new RepositoryMissingException(String.join(", ", resolvedRepositories.missing()));
         }
 
         new GetSnapshotsOperation(
             (CancellableTask) task,
+            projectId,
             resolvedRepositories.repositoryMetadata(),
             request.snapshots(),
             request.ignoreUnavailable(),
@@ -139,8 +177,9 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             request.size(),
             SnapshotsInProgress.get(state),
             request.verbose(),
-            request.includeIndexNames()
-        ).getMultipleReposSnapshotInfo(listener);
+            request.includeIndexNames(),
+            request.states()
+        ).runOperation(listener);
     }
 
     /**
@@ -151,24 +190,94 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
      * results.
      */
     private class GetSnapshotsOperation {
+        /*
+         * Overall (conceptual) dataflow:
+         *
+         *     All snapshots (in requested repositories)
+         *         |
+         *         +----------------------------------X  ?from_sort_value (when ?sort = repo)
+         *         |
+         *         +-->  In-progress snapshots
+         *         |         |
+         *         |         +------------------------X  snapshotNamePredicate (requested names/wildcards)
+         *         |         |
+         *         |         +-->  Synthesize SnapshotInfos for in-progress snapshots --------------------------+
+         *         |                                                                                            |
+         *         +-->  Completed snapshots                                                                    |
+         *                      |                                                                               |
+         *                      +---------------------X  Skipped as also in-progress                            |
+         *                      +---------------------X  snapshotNamePredicate (requested names/wildcards)      |
+         *                      +---------------------X  ?from_sort_value (when ?sort = name/indices)           |
+         *                      |                                                                               |
+         *                      +-->  Look up SnapshotDetails                                                   |
+         *                            |                                                                         |
+         *                            | Preflight filtering (may be incomplete)                                 |
+         *                            +---------------X  ?from_sort_value (when ?sort = start/duration)         |
+         *                            +---------------X  ?state                                                 |
+         *                            +---------------X  ?slm_policy_filter                                     |
+         *                            |                                                                         |
+         *                            | (proceed if preflight result is INCLUDE or INCONCLUSIVE)                |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |      We might be able to tell here if it'll pass real filtering         |
+         *                            |      but be skipped due to ?after, so we could add it to total          |
+         *                            |      and then skip loading its SnapshotInfo (TODO).                     |
+         *                            |                                                                         |
+         *                            |      We might be able to tell here if it'll pass real filtering         |
+         *                            |      and ?after but there will be ≥offset+size earlier-sorting          |
+         *                            |      snapshots so we could add it to total & remaining and skip         |
+         *                            |      loading its SnapshotInfo (TODO).                                   |
+         *                            |                                                                         |
+         *                            |      Harder: we might even be able to tell here if it'll pass           |
+         *                            |      real filtering and ?after but there will be <offset                |
+         *                            |      earlier-sorting snapshots so we could add it to total and          |
+         *                            |      then skip loading its SnapshotInfo (TODO).                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            +-->  Load SnapshotInfos for completed snapshots -------------------------+
+         *                                                                                                      |
+         *     SnapshotInfos (merged) <-------------------------------------------------------------------------+
+         *         |
+         *         | Real filtering (for when SnapshotDetails incomplete/insufficient)
+         *         +----------------------------------X  ?from_sort_value
+         *         +----------------------------------X  ?state
+         *         +----------------------------------X  ?slm_policy_filter
+         *         |
+         *         +-->  Counted in total
+         *               |
+         *               +----------------------------X  Skipped due to ?after
+         *               |
+         *               +---> Not already returned - added to SnapshotInfoCollector
+         *                     |
+         *                     +----------------------X  Skipped due to ?offset
+         *                     +--------------------------------------------------------------------------------+
+         *                     +----------------------X  Omitted due to ?size (counted in remaining)            |
+         *                                                                                                      |
+         *                                                                                                      |
+         *                                                  RESULTS <-------------------------------------------+
+         */
+
         private final CancellableTask cancellableTask;
 
+        private final ProjectId projectId;
         // repositories
         private final List<RepositoryMetadata> repositories;
 
         // snapshots selection
         private final SnapshotNamePredicate snapshotNamePredicate;
-        private final SnapshotPredicates fromSortValuePredicates;
+        private final FromSortValuePredicates fromSortValuePredicates;
         private final Predicate<String> slmPolicyPredicate;
+        private final EnumSet<SnapshotState> states;
+        private final boolean matchAllCompletedStates;
 
         // snapshot ordering/pagination
         private final SnapshotSortKey sortBy;
         private final SortOrder order;
         @Nullable
         private final String fromSortValue;
-        private final int offset;
-        private final Predicate<SnapshotInfo> afterPredicate;
-        private final int size;
+        private final AfterPredicates afterPredicates;
 
         // current state
         private final SnapshotsInProgress snapshotsInProgress;
@@ -182,21 +291,16 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         private final GetSnapshotInfoExecutor getSnapshotInfoExecutor;
 
         // results
-        private final Queue<List<SnapshotInfo>> allSnapshotInfos = ConcurrentCollections.newQueue();
+        private final SnapshotInfoCollector snapshotInfoCollector;
 
         /**
          * Accumulates number of snapshots that match the name/fromSortValue/slmPolicy predicates, to be returned in the response.
          */
         private final AtomicInteger totalCount = new AtomicInteger();
 
-        /**
-         * Accumulates the number of snapshots that match the name/fromSortValue/slmPolicy/after predicates, for sizing the final result
-         * list.
-         */
-        private final AtomicInteger resultsCount = new AtomicInteger();
-
         GetSnapshotsOperation(
             CancellableTask cancellableTask,
+            ProjectId projectId,
             List<RepositoryMetadata> repositories,
             String[] snapshots,
             boolean ignoreUnavailable,
@@ -205,65 +309,149 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             SortOrder order,
             String fromSortValue,
             int offset,
-            SnapshotSortKey.After after,
+            After after,
             int size,
             SnapshotsInProgress snapshotsInProgress,
             boolean verbose,
-            boolean indices
+            boolean indices,
+            EnumSet<SnapshotState> states
         ) {
             this.cancellableTask = cancellableTask;
+            this.projectId = projectId;
             this.repositories = repositories;
             this.ignoreUnavailable = ignoreUnavailable;
             this.sortBy = sortBy;
             this.order = order;
             this.fromSortValue = fromSortValue;
-            this.offset = offset;
-            this.size = size;
             this.snapshotsInProgress = snapshotsInProgress;
             this.verbose = verbose;
             this.indices = indices;
+            this.states = states;
+            this.matchAllCompletedStates = states.containsAll(COMPLETED_STATES);
 
             this.snapshotNamePredicate = SnapshotNamePredicate.forSnapshots(ignoreUnavailable, snapshots);
-            this.fromSortValuePredicates = SnapshotPredicates.forFromSortValue(fromSortValue, sortBy, order);
+            this.fromSortValuePredicates = FromSortValuePredicates.forFromSortValue(fromSortValue, sortBy, order);
             this.slmPolicyPredicate = SlmPolicyPredicate.forPolicies(policies);
-            this.afterPredicate = sortBy.getAfterPredicate(after, order);
+            this.afterPredicates = AfterPredicates.forAfter(after, sortBy, order);
 
             this.getSnapshotInfoExecutor = new GetSnapshotInfoExecutor(
                 threadPool.info(ThreadPool.Names.SNAPSHOT_META).getMax(),
                 cancellableTask::isCancelled
             );
+
+            this.snapshotInfoCollector = SnapshotInfoCollector.create(sortBy.getSnapshotInfoComparator(order), size, offset);
+
+            if (verbose == false) {
+                assert fromSortValuePredicates.isMatchAll() : "filtering is not supported in non-verbose mode";
+                assert slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES : "filtering is not supported in non-verbose mode";
+            }
         }
 
-        void getMultipleReposSnapshotInfo(ActionListener<GetSnapshotsResponse> listener) {
-            SubscribableListener
+        /**
+         * Run the get-snapshots operation and compute the response.
+         */
+        void runOperation(ActionListener<GetSnapshotsResponse> listener) {
+            SubscribableListener.newForked(this::populateResults)
+                .addListener(
+                    listener.map(ignored -> buildResponse()),
+                    // If we didn't load any SnapshotInfo blobs from the repo (e.g. verbose=false or current-snapshots-only) then this
+                    // listener chain will already be complete, no need to fork again. Otherwise, we forked to SNAPSHOT_META so must
+                    // fork back to MANAGEMENT for the final step.
+                    executor,
+                    threadPool.getThreadContext()
+                );
+        }
 
-                .<Void>newForked(repositoriesDoneListener -> {
-                    try (var listeners = new RefCountingListener(repositoriesDoneListener)) {
-                        for (final RepositoryMetadata repository : repositories) {
-                            final String repoName = repository.name();
-                            if (skipRepository(repoName)) {
-                                continue;
-                            }
+        /**
+         * Populate the results fields ({@link #snapshotInfoCollector} and {@link #totalCount}).
+         */
+        private void populateResults(ActionListener<Void> listener) {
+            try (var listeners = new RefCountingListener(listener)) {
 
-                            if (listeners.isFailing()) {
-                                return;
-                            }
+                final BooleanSupplier failFastSupplier = () -> cancellableTask.isCancelled() || listeners.isFailing();
 
-                            SubscribableListener.<RepositoryData>newForked(l -> maybeGetRepositoryData(repoName, l))
-                                .<Void>andThen((l, repositoryData) -> loadSnapshotInfos(repoName, repositoryData, l))
-                                .addListener(listeners.acquire());
-                        }
-                    }
-                })
+                final Iterator<AsyncSnapshotInfoIterator> asyncSnapshotInfoIterators = Iterators.failFast(
+                    Iterators.map(
+                        Iterators.filter(
+                            Iterators.map(repositories.iterator(), RepositoryMetadata::name),
+                            repositoryName -> skipRepository(repositoryName) == false
+                        ),
+                        repositoryName -> asyncRepositoryContentsListener -> SubscribableListener
 
-                .addListener(listener.map(ignored -> buildResponse()), executor, threadPool.getThreadContext());
+                            .<RepositoryData>newForked(
+                                l -> maybeGetRepositoryData(
+                                    repositoryName,
+                                    l.delegateResponse(
+                                        (ll, e) -> ll.onFailure(
+                                            new RepositoryException(
+                                                repositoryName,
+                                                "cannot retrieve snapshots list from this repository",
+                                                e
+                                            )
+                                        )
+                                    )
+                                )
+                            )
+                            .andThenApply(repositoryData -> {
+                                assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT);
+                                cancellableTask.ensureNotCancelled();
+                                ensureRequiredNamesPresent(repositoryName, repositoryData);
+                                return getAsyncSnapshotInfoIterator(
+                                    repositoriesService.repository(projectId, repositoryName),
+                                    repositoryData
+                                );
+                            })
+                            .addListener(asyncRepositoryContentsListener)
+                    ),
+                    failFastSupplier
+                );
+
+                // TODO if the request parameters allow it, modify asyncSnapshotInfoIterators to skip unnecessary GET calls here
+
+                asyncSnapshotInfoIterators.forEachRemaining(
+                    asyncSnapshotInfoIteratorSupplier -> asyncSnapshotInfoIteratorSupplier.getAsyncSnapshotInfoIterator(
+                        listeners.acquire(
+                            asyncSnapshotInfoIterator -> ThrottledIterator.run(
+                                Iterators.failFast(asyncSnapshotInfoIterator, failFastSupplier),
+                                (ref, asyncSnapshotInfo) -> ActionListener.run(
+                                    ActionListener.runBefore(listeners.acquire(), ref::close),
+                                    refListener -> asyncSnapshotInfo.getSnapshotInfo(new ActionListener<>() {
+                                        @Override
+                                        public void onResponse(SnapshotInfo snapshotInfo) {
+                                            if (matchesPredicates(snapshotInfo)) {
+                                                totalCount.incrementAndGet();
+                                                if (afterPredicates.test(snapshotInfo)) {
+                                                    snapshotInfoCollector.add(snapshotInfo.maybeWithoutIndices(indices));
+                                                }
+                                            }
+                                            refListener.onResponse(null);
+                                        }
+
+                                        @Override
+                                        public void onFailure(Exception e) {
+                                            if (ignoreUnavailable) {
+                                                logger.warn(Strings.format("failed to fetch snapshot info for [%s]", asyncSnapshotInfo), e);
+                                                refListener.onResponse(null);
+                                            } else {
+                                                refListener.onFailure(e);
+                                            }
+                                        }
+                                    })
+                                ),
+                                getSnapshotInfoExecutor.getMaxRunningTasks(),
+                                () -> {}
+                            )
+                        )
+                    )
+                );
+            }
         }
 
         private void maybeGetRepositoryData(String repositoryName, ActionListener<RepositoryData> listener) {
             if (snapshotNamePredicate == SnapshotNamePredicate.MATCH_CURRENT_ONLY) {
                 listener.onResponse(null);
             } else {
-                repositoriesService.repository(repositoryName).getRepositoryData(executor, listener);
+                repositoriesService.repository(projectId, repositoryName).getRepositoryData(executor, listener);
             }
         }
 
@@ -273,28 +461,6 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                 return order == SortOrder.ASC ? fromSortValue.compareTo(repositoryName) > 0 : fromSortValue.compareTo(repositoryName) < 0;
             } else {
                 return false;
-            }
-        }
-
-        private void loadSnapshotInfos(String repositoryName, @Nullable RepositoryData repositoryData, ActionListener<Void> listener) {
-            assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT);
-
-            cancellableTask.ensureNotCancelled();
-            ensureRequiredNamesPresent(repositoryName, repositoryData);
-
-            if (verbose) {
-                loadSnapshotInfos(repositoryName, getSnapshotIdIterator(repositoryName, repositoryData), listener);
-            } else {
-                assert fromSortValuePredicates.isMatchAll() : "filtering is not supported in non-verbose mode";
-                assert slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES : "filtering is not supported in non-verbose mode";
-
-                addSimpleSnapshotInfos(
-                    getSnapshotIdIterator(repositoryName, repositoryData),
-                    repositoryName,
-                    repositoryData,
-                    snapshotsInProgress.forRepo(repositoryName).stream().map(entry -> SnapshotInfo.inProgress(entry).basic()).toList()
-                );
-                listener.onResponse(null);
             }
         }
 
@@ -309,7 +475,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             }
 
             final var unmatchedRequiredNames = new HashSet<>(snapshotNamePredicate.requiredNames());
-            for (final var snapshotInProgress : snapshotsInProgress.forRepo(repositoryName)) {
+            for (final var snapshotInProgress : snapshotsInProgress.forRepo(projectId, repositoryName)) {
                 unmatchedRequiredNames.remove(snapshotInProgress.snapshot().getSnapshotId().getName());
             }
             if (unmatchedRequiredNames.isEmpty()) {
@@ -327,244 +493,218 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         }
 
         /**
-         * @return an iterator over the snapshot IDs in the given repository which match {@link #snapshotNamePredicate}.
+         * An asynchronous supplier of a {@link SnapshotInfo}.
          */
-        private Iterator<SnapshotId> getSnapshotIdIterator(String repositoryName, @Nullable RepositoryData repositoryData) {
+        private interface AsyncSnapshotInfo {
+            /**
+             * @param listener completed, possibly asynchronously, with the appropriate {@link SnapshotInfo}.
+             */
+            void getSnapshotInfo(ActionListener<SnapshotInfo> listener);
+        }
 
-            // now iterate through the snapshots again, returning matching IDs (or null)
+        /**
+         * An asynchronous supplier of the collection of snapshots contained in a repository, as an iterator over snapshots each represented
+         * as an {@link AsyncSnapshotInfo}.
+         */
+        private interface AsyncSnapshotInfoIterator {
+            /**
+             * @param listener completed, possibly asynchronously, with the appropriate iterator over {@link AsyncSnapshotInfo} instances.
+             */
+            void getAsyncSnapshotInfoIterator(ActionListener<Iterator<AsyncSnapshotInfo>> listener);
+        }
+
+        /**
+         * @return an {@link AsyncSnapshotInfo} for the given in-progress snapshot entry.
+         */
+        private AsyncSnapshotInfo forSnapshotInProgress(SnapshotsInProgress.Entry snapshotInProgress) {
+            return new AsyncSnapshotInfo() {
+                @Override
+                public void getSnapshotInfo(ActionListener<SnapshotInfo> listener) {
+                    assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT); // see [NOTE ON THREADING]
+                    final var snapshotInfo = SnapshotInfo.inProgress(snapshotInProgress);
+                    listener.onResponse(verbose ? snapshotInfo : snapshotInfo.basic());
+                }
+
+                @Override
+                public String toString() {
+                    return snapshotInProgress.snapshot().toString();
+                }
+            };
+        }
+
+        /**
+         * @return an {@link AsyncSnapshotInfo} for the given completed snapshot.
+         */
+        private AsyncSnapshotInfo forCompletedSnapshot(
+            Repository repository,
+            SnapshotId snapshotId,
+            RepositoryData repositoryData,
+            Map<SnapshotId, List<String>> indicesLookup
+        ) {
+            return new AsyncSnapshotInfo() {
+                @Override
+                public void getSnapshotInfo(ActionListener<SnapshotInfo> listener) {
+                    if (verbose) {
+                        // always forks to SNAPSHOT_META, and may already have done so for an earlier item - see [NOTE ON THREADING]
+                        assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT, ThreadPool.Names.SNAPSHOT_META);
+                        getSnapshotInfoExecutor.getSnapshotInfo(repository, snapshotId, listener);
+                    } else {
+                        assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT); // see [NOTE ON THREADING]
+                        ActionListener.completeWith(
+                            listener,
+                            () -> new SnapshotInfo(
+                                new Snapshot(repository.getProjectId(), repository.getMetadata().name(), snapshotId),
+                                indicesLookup.getOrDefault(snapshotId, Collections.emptyList()),
+                                Collections.emptyList(),
+                                Collections.emptyList(),
+                                repositoryData.getSnapshotState(snapshotId)
+                            )
+                        );
+                    }
+                }
+
+                @Override
+                public String toString() {
+                    return repository.getMetadata().name() + ":" + snapshotId;
+                }
+            };
+        }
+
+        /**
+         * @return an iterator of {@link AsyncSnapshotInfo} instances in the given repository which match {@link #snapshotNamePredicate}.
+         */
+        private Iterator<AsyncSnapshotInfo> getAsyncSnapshotInfoIterator(Repository repository, @Nullable RepositoryData repositoryData) {
+            // now iterate through the snapshots again, returning SnapshotInfo suppliers for ones with matching IDs
             final Set<SnapshotId> matchingInProgressSnapshots = new HashSet<>();
+            final var indicesLookup = getIndicesLookup(repositoryData);
             return Iterators.concat(
                 // matching in-progress snapshots first
-                Iterators.filter(
-                    Iterators.map(
-                        snapshotsInProgress.forRepo(repositoryName).iterator(),
-                        snapshotInProgress -> snapshotInProgress.snapshot().getSnapshotId()
-                    ),
-                    snapshotId -> {
-                        if (snapshotNamePredicate.test(snapshotId.getName(), true)) {
-                            matchingInProgressSnapshots.add(snapshotId);
-                            return true;
-                        } else {
-                            return false;
-                        }
+                Iterators.map(Iterators.filter(snapshotsInProgress.forRepo(repository.getProjectRepo()).iterator(), snapshotInProgress -> {
+                    final var snapshotId = snapshotInProgress.snapshot().getSnapshotId();
+                    if (snapshotNamePredicate.test(snapshotId.getName(), true)) {
+                        matchingInProgressSnapshots.add(snapshotId);
+                        return true;
+                    } else {
+                        return false;
                     }
-                ),
+                }), this::forSnapshotInProgress),
                 repositoryData == null
-                    // only returning in-progress snapshots
+                    // Only returning in-progress snapshots:
                     ? Collections.emptyIterator()
-                    // also return matching completed snapshots (except any ones that were also found to be in-progress)
-                    : Iterators.filter(
-                        repositoryData.getSnapshotIds().iterator(),
-                        snapshotId -> matchingInProgressSnapshots.contains(snapshotId) == false
-                            && snapshotNamePredicate.test(snapshotId.getName(), false)
-                            && matchesPredicates(snapshotId, repositoryData)
+                    // Also return matching completed snapshots (except any ones that were also found to be in-progress).
+                    // NB this will fork tasks to SNAPSHOT_META (if verbose=true) which will be used for subsequent items so we mustn't
+                    // follow it with any more non-forking iteration. See [NOTE ON THREADING].
+                    : Iterators.map(
+                        Iterators.filter(
+                            repositoryData.getSnapshotIds().iterator(),
+                            snapshotId -> matchingInProgressSnapshots.contains(snapshotId) == false
+                                && snapshotNamePredicate.test(snapshotId.getName(), false)
+                                && matchesPredicates(snapshotId, repositoryData) != EXCLUDE
+                        ),
+                        snapshotId -> forCompletedSnapshot(repository, snapshotId, repositoryData, indicesLookup)
                     )
             );
         }
 
-        private void loadSnapshotInfos(String repositoryName, Iterator<SnapshotId> snapshotIdIterator, ActionListener<Void> listener) {
-            if (cancellableTask.notifyIfCancelled(listener)) {
-                return;
+        private Map<SnapshotId, List<String>> getIndicesLookup(RepositoryData repositoryData) {
+            if (repositoryData == null || verbose || indices == false) {
+                return Map.of();
             }
-            final AtomicInteger repositoryTotalCount = new AtomicInteger();
-            final Set<SnapshotId> snapshotIdsToIterate = new HashSet<>();
-            snapshotIdIterator.forEachRemaining(snapshotIdsToIterate::add);
 
-            final List<SnapshotInfo> snapshots = new ArrayList<>(snapshotIdsToIterate.size());
-            // first, look at the snapshots in progress
-            final List<SnapshotsInProgress.Entry> entries = SnapshotsService.currentSnapshots(
-                snapshotsInProgress,
-                repositoryName,
-                snapshotIdsToIterate.stream().map(SnapshotId::getName).toList()
-            );
-            for (SnapshotsInProgress.Entry entry : entries) {
-                if (snapshotIdsToIterate.remove(entry.snapshot().getSnapshotId())) {
-                    final SnapshotInfo snapshotInfo = SnapshotInfo.inProgress(entry);
-                    if (matchesPredicates(snapshotInfo)) {
-                        repositoryTotalCount.incrementAndGet();
-                        if (afterPredicate.test(snapshotInfo)) {
-                            snapshots.add(snapshotInfo.maybeWithoutIndices(indices));
-                        }
+            final Map<SnapshotId, List<String>> snapshotsToIndices = new HashMap<>();
+            for (IndexId indexId : repositoryData.getIndices().values()) {
+                for (SnapshotId snapshotId : repositoryData.getSnapshots(indexId)) {
+                    if (snapshotNamePredicate.test(snapshotId.getName(), false)
+                        && matchesPredicates(snapshotId, repositoryData) != EXCLUDE) {
+                        snapshotsToIndices.computeIfAbsent(snapshotId, ignored -> new ArrayList<>()).add(indexId.getName());
                     }
                 }
             }
-            // then, look in the repository if there's any matching snapshots left
-            SubscribableListener
-
-                .<Void>newForked(l -> {
-                    try (var listeners = new RefCountingListener(l)) {
-                        if (snapshotIdsToIterate.isEmpty()) {
-                            return;
-                        }
-
-                        final Repository repository;
-                        try {
-                            repository = repositoriesService.repository(repositoryName);
-                        } catch (RepositoryMissingException e) {
-                            listeners.acquire().onFailure(e);
-                            return;
-                        }
-
-                        // only need to synchronize accesses related to reading SnapshotInfo from the repo
-                        final List<SnapshotInfo> syncSnapshots = Collections.synchronizedList(snapshots);
-
-                        ThrottledIterator.run(
-                            Iterators.failFast(
-                                snapshotIdsToIterate.iterator(),
-                                () -> cancellableTask.isCancelled() || listeners.isFailing()
-                            ),
-                            (ref, snapshotId) -> {
-                                final var refListener = ActionListener.runBefore(listeners.acquire(), ref::close);
-                                getSnapshotInfoExecutor.getSnapshotInfo(repository, snapshotId, new ActionListener<>() {
-                                    @Override
-                                    public void onResponse(SnapshotInfo snapshotInfo) {
-                                        if (matchesPredicates(snapshotInfo)) {
-                                            repositoryTotalCount.incrementAndGet();
-                                            if (afterPredicate.test(snapshotInfo)) {
-                                                syncSnapshots.add(snapshotInfo.maybeWithoutIndices(indices));
-                                            }
-                                        }
-                                        refListener.onResponse(null);
-                                    }
-
-                                    @Override
-                                    public void onFailure(Exception e) {
-                                        if (ignoreUnavailable) {
-                                            logger.warn(
-                                                Strings.format("failed to fetch snapshot info for [%s:%s]", repository, snapshotId),
-                                                e
-                                            );
-                                            refListener.onResponse(null);
-                                        } else {
-                                            refListener.onFailure(e);
-                                        }
-                                    }
-                                });
-                            },
-                            getSnapshotInfoExecutor.getMaxRunningTasks(),
-                            () -> {},
-                            () -> {}
-                        );
-                    }
-                })
-
-                // no need to synchronize access to snapshots: all writes happen-before this read
-                .andThenAccept(ignored -> addResults(repositoryTotalCount.get(), snapshots))
-
-                .addListener(listener);
-        }
-
-        private void addResults(int repositoryTotalCount, List<SnapshotInfo> snapshots) {
-            totalCount.addAndGet(repositoryTotalCount);
-            resultsCount.addAndGet(snapshots.size());
-            allSnapshotInfos.add(snapshots);
-        }
-
-        private void addSimpleSnapshotInfos(
-            final Iterator<SnapshotId> snapshotIdIterator,
-            final String repositoryName,
-            @Nullable final RepositoryData repositoryData,
-            final List<SnapshotInfo> currentSnapshots
-        ) {
-            if (repositoryData == null) {
-                // only want current snapshots
-                addResults(currentSnapshots.size(), currentSnapshots.stream().filter(afterPredicate).toList());
-                return;
-            } // else want non-current snapshots as well, which are found in the repository data
-
-            final Set<SnapshotId> toResolve = new HashSet<>();
-            snapshotIdIterator.forEachRemaining(toResolve::add);
-
-            List<SnapshotInfo> snapshotInfos = new ArrayList<>(currentSnapshots.size() + toResolve.size());
-            int repositoryTotalCount = 0;
-            for (SnapshotInfo snapshotInfo : currentSnapshots) {
-                assert snapshotInfo.startTime() == 0L && snapshotInfo.endTime() == 0L && snapshotInfo.totalShards() == 0L : snapshotInfo;
-                if (toResolve.remove(snapshotInfo.snapshot().getSnapshotId())) {
-                    repositoryTotalCount += 1;
-                    if (afterPredicate.test(snapshotInfo)) {
-                        snapshotInfos.add(snapshotInfo);
-                    }
-                }
-            }
-            Map<SnapshotId, List<String>> snapshotsToIndices = new HashMap<>();
-            if (indices) {
-                for (IndexId indexId : repositoryData.getIndices().values()) {
-                    for (SnapshotId snapshotId : repositoryData.getSnapshots(indexId)) {
-                        if (toResolve.contains(snapshotId)) {
-                            snapshotsToIndices.computeIfAbsent(snapshotId, (k) -> new ArrayList<>()).add(indexId.getName());
-                        }
-                    }
-                }
-            }
-            for (SnapshotId snapshotId : toResolve) {
-                final var snapshotInfo = new SnapshotInfo(
-                    new Snapshot(repositoryName, snapshotId),
-                    snapshotsToIndices.getOrDefault(snapshotId, Collections.emptyList()),
-                    Collections.emptyList(),
-                    Collections.emptyList(),
-                    repositoryData.getSnapshotState(snapshotId)
-                );
-                repositoryTotalCount += 1;
-                if (afterPredicate.test(snapshotInfo)) {
-                    snapshotInfos.add(snapshotInfo);
-                }
-            }
-            addResults(repositoryTotalCount, snapshotInfos);
+            return snapshotsToIndices;
         }
 
         private GetSnapshotsResponse buildResponse() {
-            assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT);
+            assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT); // see [NOTE ON THREADING]
             cancellableTask.ensureNotCancelled();
-            int remaining = 0;
-            final var resultsStream = allSnapshotInfos.stream()
-                .flatMap(Collection::stream)
-                .peek(this::assertSatisfiesAllPredicates)
-                .sorted(sortBy.getSnapshotInfoComparator(order))
-                .skip(offset);
-            final List<SnapshotInfo> snapshotInfos;
-            if (size == GetSnapshotsRequest.NO_LIMIT || resultsCount.get() <= size) {
-                snapshotInfos = resultsStream.toList();
-            } else {
-                snapshotInfos = new ArrayList<>(size);
-                for (var iterator = resultsStream.iterator(); iterator.hasNext();) {
-                    final var snapshotInfo = iterator.next();
-                    if (snapshotInfos.size() < size) {
-                        snapshotInfos.add(snapshotInfo);
-                    } else {
-                        remaining += 1;
-                    }
-                }
-            }
+            final var snapshotInfos = snapshotInfoCollector.getSnapshotInfos();
+            assert assertSatisfiesAllPredicates(snapshotInfos);
+            final int remaining = snapshotInfoCollector.getRemaining();
             return new GetSnapshotsResponse(
                 snapshotInfos,
-                null,
-                remaining > 0 ? sortBy.encodeAfterQueryParam(snapshotInfos.get(snapshotInfos.size() - 1)) : null,
+                remaining > 0 ? After.fromSnapshotInfo(snapshotInfos.getLast(), sortBy).toQueryParam() : null,
                 totalCount.get(),
                 remaining
             );
         }
 
-        private void assertSatisfiesAllPredicates(SnapshotInfo snapshotInfo) {
-            assert matchesPredicates(snapshotInfo);
-            assert afterPredicate.test(snapshotInfo);
-            assert indices || snapshotInfo.indices().isEmpty();
+        private boolean assertSatisfiesAllPredicates(List<SnapshotInfo> snapshotInfos) {
+            snapshotInfos.forEach(snapshotInfo -> {
+                assert matchesPredicates(snapshotInfo);
+                assert afterPredicates.test(snapshotInfo);
+                assert indices || snapshotInfo.indices().isEmpty();
+            });
+            return true;
         }
 
-        private boolean matchesPredicates(SnapshotId snapshotId, RepositoryData repositoryData) {
-            if (fromSortValuePredicates.test(snapshotId, repositoryData) == false) {
-                return false;
+        private PreflightFilterResult matchesPredicates(SnapshotId snapshotId, RepositoryData repositoryData) {
+            final var fromSortValueResult = fromSortValuePredicates.test(snapshotId, repositoryData);
+            if (fromSortValueResult == EXCLUDE) {
+                return EXCLUDE;
             }
 
-            if (slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
-                return true;
+            if (matchAllCompletedStates && slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
+                return fromSortValueResult;
             }
 
             final var details = repositoryData.getSnapshotDetails(snapshotId);
-            return details == null || details.getSlmPolicy() == null || slmPolicyPredicate.test(details.getSlmPolicy());
+            if (details == null) {
+                return INCONCLUSIVE;
+            }
+
+            final var statesFilterResult = testStatesFilter(details);
+            if (statesFilterResult == EXCLUDE) {
+                return EXCLUDE;
+            }
+
+            final var slmPolicyResult = testSlmPolicy(details);
+            if (slmPolicyResult == EXCLUDE) {
+                return EXCLUDE;
+            }
+
+            if (fromSortValueResult == INCONCLUSIVE || statesFilterResult == INCONCLUSIVE || slmPolicyResult == INCONCLUSIVE) {
+                return INCONCLUSIVE;
+            }
+            return INCLUDE;
+        }
+
+        private PreflightFilterResult testStatesFilter(RepositoryData.SnapshotDetails details) {
+            if (matchAllCompletedStates) {
+                return INCLUDE;
+            }
+            final var snapshotState = details.getSnapshotState();
+            if (snapshotState == null) {
+                return INCONCLUSIVE;
+            }
+            return states.contains(snapshotState) ? INCLUDE : EXCLUDE;
+        }
+
+        private PreflightFilterResult testSlmPolicy(RepositoryData.SnapshotDetails details) {
+            if (slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
+                return INCLUDE;
+            }
+            final var slmPolicy = details.getSlmPolicy();
+            if (slmPolicy == null) {
+                return INCONCLUSIVE;
+            }
+            return slmPolicyPredicate.test(slmPolicy) ? INCLUDE : EXCLUDE;
         }
 
         private boolean matchesPredicates(SnapshotInfo snapshotInfo) {
             if (fromSortValuePredicates.test(snapshotInfo) == false) {
+                return false;
+            }
+
+            if (snapshotInfo.state() != null && states.contains(snapshotInfo.state()) == false) {
                 return false;
             }
 
@@ -576,143 +716,6 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             return slmPolicyPredicate.test(
                 metadata != null && metadata.get(SnapshotsService.POLICY_ID_METADATA_FIELD) instanceof String s ? s : ""
             );
-        }
-    }
-
-    /**
-     * A pair of predicates for the get snapshots action. The {@link #test(SnapshotId, RepositoryData)} predicate is applied to combinations
-     * of snapshot id and repository data to determine which snapshots to fully load from the repository and rules out all snapshots that do
-     * not match the given {@link GetSnapshotsRequest} that can be ruled out through the information in {@link RepositoryData}.
-     * The predicate returned by {@link #test(SnapshotInfo)} predicate is then applied the instances of {@link SnapshotInfo} that were
-     * loaded from the repository to filter out those remaining that did not match the request but could not be ruled out without loading
-     * their {@link SnapshotInfo}.
-     */
-    private static final class SnapshotPredicates {
-
-        private static final SnapshotPredicates MATCH_ALL = new SnapshotPredicates(null, null);
-
-        @Nullable // if all snapshot IDs match
-        private final BiPredicate<SnapshotId, RepositoryData> preflightPredicate;
-
-        @Nullable // if all snapshots match
-        private final Predicate<SnapshotInfo> snapshotPredicate;
-
-        private SnapshotPredicates(
-            @Nullable BiPredicate<SnapshotId, RepositoryData> preflightPredicate,
-            @Nullable Predicate<SnapshotInfo> snapshotPredicate
-        ) {
-            this.snapshotPredicate = snapshotPredicate;
-            this.preflightPredicate = preflightPredicate;
-        }
-
-        boolean test(SnapshotId snapshotId, RepositoryData repositoryData) {
-            return preflightPredicate == null || preflightPredicate.test(snapshotId, repositoryData);
-        }
-
-        boolean isMatchAll() {
-            return snapshotPredicate == null;
-        }
-
-        boolean test(SnapshotInfo snapshotInfo) {
-            return snapshotPredicate == null || snapshotPredicate.test(snapshotInfo);
-        }
-
-        static SnapshotPredicates forFromSortValue(String fromSortValue, SnapshotSortKey sortBy, SortOrder order) {
-            if (fromSortValue == null) {
-                return MATCH_ALL;
-            }
-
-            switch (sortBy) {
-                case START_TIME:
-                    final long after = Long.parseLong(fromSortValue);
-                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
-                        final long startTime = getStartTime(snapshotId, repositoryData);
-                        return startTime == -1 || after <= startTime;
-                    } : (snapshotId, repositoryData) -> {
-                        final long startTime = getStartTime(snapshotId, repositoryData);
-                        return startTime == -1 || after >= startTime;
-                    }, filterByLongOffset(SnapshotInfo::startTime, after, order));
-
-                case NAME:
-                    return new SnapshotPredicates(
-                        order == SortOrder.ASC
-                            ? (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) <= 0
-                            : (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) >= 0,
-                        null
-                    );
-
-                case DURATION:
-                    final long afterDuration = Long.parseLong(fromSortValue);
-                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
-                        final long duration = getDuration(snapshotId, repositoryData);
-                        return duration == -1 || afterDuration <= duration;
-                    } : (snapshotId, repositoryData) -> {
-                        final long duration = getDuration(snapshotId, repositoryData);
-                        return duration == -1 || afterDuration >= duration;
-                    }, filterByLongOffset(info -> info.endTime() - info.startTime(), afterDuration, order));
-
-                case INDICES:
-                    final int afterIndexCount = Integer.parseInt(fromSortValue);
-                    return new SnapshotPredicates(
-                        order == SortOrder.ASC
-                            ? (snapshotId, repositoryData) -> afterIndexCount <= indexCount(snapshotId, repositoryData)
-                            : (snapshotId, repositoryData) -> afterIndexCount >= indexCount(snapshotId, repositoryData),
-                        null
-                    );
-
-                case REPOSITORY:
-                    // already handled in #maybeFilterRepositories
-                    return MATCH_ALL;
-
-                case SHARDS:
-                    return new SnapshotPredicates(
-                        null,
-                        filterByLongOffset(SnapshotInfo::totalShards, Integer.parseInt(fromSortValue), order)
-                    );
-                case FAILED_SHARDS:
-                    return new SnapshotPredicates(
-                        null,
-                        filterByLongOffset(SnapshotInfo::failedShards, Integer.parseInt(fromSortValue), order)
-                    );
-                default:
-                    throw new AssertionError("unexpected sort column [" + sortBy + "]");
-            }
-        }
-
-        private static Predicate<SnapshotInfo> filterByLongOffset(ToLongFunction<SnapshotInfo> extractor, long after, SortOrder order) {
-            return order == SortOrder.ASC ? info -> after <= extractor.applyAsLong(info) : info -> after >= extractor.applyAsLong(info);
-        }
-
-        private static long getDuration(SnapshotId snapshotId, RepositoryData repositoryData) {
-            final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
-            if (details == null) {
-                return -1;
-            }
-            final long startTime = details.getStartTimeMillis();
-            if (startTime == -1) {
-                return -1;
-            }
-            final long endTime = details.getEndTimeMillis();
-            if (endTime == -1) {
-                return -1;
-            }
-            return endTime - startTime;
-        }
-
-        private static long getStartTime(SnapshotId snapshotId, RepositoryData repositoryData) {
-            final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
-            return details == null ? -1 : details.getStartTimeMillis();
-        }
-
-        private static int indexCount(SnapshotId snapshotId, RepositoryData repositoryData) {
-            // TODO: this could be made more efficient by caching this number in RepositoryData
-            int indexCount = 0;
-            for (IndexId idx : repositoryData.getIndices().values()) {
-                if (repositoryData.getSnapshots(idx).contains(snapshotId)) {
-                    indexCount++;
-                }
-            }
-            return indexCount;
         }
     }
 
@@ -738,7 +741,9 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         void getSnapshotInfo(Repository repository, SnapshotId snapshotId, ActionListener<SnapshotInfo> listener) {
             enqueueTask(listener.delegateFailure((l, ref) -> {
                 if (isCancelledSupplier.getAsBoolean()) {
-                    l.onFailure(new TaskCancelledException("task cancelled"));
+                    try (ref) {
+                        l.onFailure(new TaskCancelledException("task cancelled"));
+                    }
                 } else {
                     repository.getSnapshotInfo(snapshotId, ActionListener.releaseAfter(l, ref));
                 }
@@ -755,7 +760,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
 
         @Override
         public boolean test(String policy) {
-            if (policy.equals("")) {
+            if (policy.isEmpty()) {
                 // empty string means that snapshot was not created by an SLM policy
                 return matchWithoutPolicy;
             }
