@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.cluster.coordination;
 
@@ -11,7 +12,6 @@ import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.core.LogEvent;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.TransportVersion;
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.cluster.AbstractNamedDiffable;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.SimpleDiffable;
@@ -25,6 +25,7 @@ import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterStateUpdateStats;
+import org.elasticsearch.common.ReferenceDocs;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamOutput;
@@ -44,7 +45,6 @@ import org.elasticsearch.test.junit.annotations.TestLogging;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
 
-import java.io.IOException;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -52,6 +52,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.CyclicBarrier;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
@@ -79,6 +80,8 @@ import static org.elasticsearch.discovery.PeerFinder.DISCOVERY_FIND_PEERS_INTERV
 import static org.elasticsearch.discovery.SettingsBasedSeedHostsProvider.DISCOVERY_SEED_HOSTS_SETTING;
 import static org.elasticsearch.monitor.StatusInfo.Status.HEALTHY;
 import static org.elasticsearch.monitor.StatusInfo.Status.UNHEALTHY;
+import static org.hamcrest.Matchers.allOf;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
@@ -572,6 +575,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             assertThat("leader should be last to ack", ackCollector.getSuccessfulAckIndex(leader), equalTo(1));
 
             follower0.setClusterStateApplyResponse(ClusterStateApplyResponse.SUCCEED);
+            leader.submitValue(randomLong()); // follower0 acks next value allowing cluster to stabilise
         }
     }
 
@@ -589,11 +593,16 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             AckCollector ackCollector = leader.submitValue(randomLong());
             cluster.runFor(DEFAULT_CLUSTER_STATE_UPDATE_DELAY, "committing value");
             assertTrue(leader.coordinator.getMode() != Coordinator.Mode.LEADER || leader.coordinator.getCurrentTerm() > startingTerm);
-            leader.setClusterStateApplyResponse(ClusterStateApplyResponse.SUCCEED);
-            cluster.stabilise();
+
             assertTrue("expected nack from " + leader, ackCollector.hasAckedUnsuccessfully(leader));
             assertTrue("expected ack from " + follower0, ackCollector.hasAckedSuccessfully(follower0));
             assertTrue("expected ack from " + follower1, ackCollector.hasAckedSuccessfully(follower1));
+
+            leader.setClusterStateApplyResponse(ClusterStateApplyResponse.SUCCEED);
+            cluster.runFor(DEFAULT_STABILISATION_TIME, "allowing new leader election");
+            cluster.getAnyLeader().submitValue(randomLong()); // old leader acks this value allowing cluster to stabilise
+            cluster.stabilise(DEFAULT_CLUSTER_STATE_UPDATE_DELAY);
+
             assertTrue(leader.coordinator.getMode() != Coordinator.Mode.LEADER || leader.coordinator.getCurrentTerm() > startingTerm);
         }
     }
@@ -603,7 +612,12 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             Cluster cluster = new Cluster(
                 3,
                 true,
-                Settings.builder().put(LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING.getKey(), "1000d").build()
+                Settings.builder()
+                    .put(
+                        LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING.getKey(),
+                        randomFrom(TimeValue.timeValueDays(1000), TimeValue.ZERO, TimeValue.MINUS_ONE)
+                    )
+                    .build()
             )
         ) {
             cluster.runRandomly();
@@ -657,14 +671,32 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
 
             follower0.heal();
             follower1.heal();
-            cluster.stabilise();
-            assertTrue("expected eventual nack from " + follower0, ackCollector.hasAckedUnsuccessfully(follower0));
-            assertTrue("expected eventual nack from " + follower1, ackCollector.hasAckedUnsuccessfully(follower1));
+
             if (expectLeaderAcksSuccessfullyInStateless) {
                 // A stateless leader directly updates the cluster state in the remote blob store: it does not require communication with
-                // the other cluster nodes to procceed with an update commit to the cluster state.
+                // the other cluster nodes to proceed with an update commit to the cluster state, so in fact the publication doesn't really
+                // time out in this case. However, this means the nodes may remain lagging until the next cluster state update - there's no
+                // master failover to resync them in this case. The nacks happen when the blackholed requests are processed.
+
+                while (leader.deliverBlackholedRequests()) {
+                    // two tasks: (i) deliver the error response, and then (ii) handle it
+                    cluster.runFor(DEFAULT_DELAY_VARIABILITY * 2, "processing blackholed cluster state update requests");
+                }
+
+                assertTrue("expected eventual nack from " + follower0, ackCollector.hasAckedUnsuccessfully(follower0));
+                assertTrue("expected eventual nack from " + follower1, ackCollector.hasAckedUnsuccessfully(follower1));
+
+                // one more task delay for the final ack
+                cluster.runFor(DEFAULT_DELAY_VARIABILITY, "processing final ack from leader");
                 assertTrue("expected ack from leader, " + leader, ackCollector.hasAckedSuccessfully(leader));
+
+                leader.submitValue(randomLong());
+                cluster.stabilise();
             } else {
+                // The timeout causes the publication to fail, the leader stands down and runs another election, and everything settles:
+                cluster.stabilise();
+                assertTrue("expected eventual nack from " + follower0, ackCollector.hasAckedUnsuccessfully(follower0));
+                assertTrue("expected eventual nack from " + follower1, ackCollector.hasAckedUnsuccessfully(follower1));
                 assertTrue("expected eventual nack from leader, " + leader, ackCollector.hasAckedUnsuccessfully(leader));
             }
         }
@@ -925,7 +957,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             }
 
             @Override
-            public void writeTo(StreamOutput out) throws IOException {
+            public void writeTo(StreamOutput out) {
                 if (timeAdvancer != null) {
                     timeAdvancer.advanceTime();
                 }
@@ -1061,7 +1093,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             cluster.stabilise();
 
             cluster.addNodesAndStabilise(1);
-            final ClusterNode newNode = cluster.clusterNodes.get(cluster.clusterNodes.size() - 1);
+            final ClusterNode newNode = cluster.clusterNodes.getLast();
             final PublishClusterStateStats newNodePublishStats = newNode.coordinator.stats().getPublishStats();
             // initial cluster state send when joining
             assertEquals(1L, newNodePublishStats.getFullClusterStateReceivedCount());
@@ -1286,9 +1318,8 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
      * @param failJoinOnAllNodes this controls whether to fail join on all nodes or only a majority subset. The atomic register CAS election
      *                           strategy will succeed in electing a master if any node can vote (even the master candidate voting for
      *                           itself).
-     * @throws Exception
      */
-    protected void clusterCannotFormWithFailingJoinValidation(boolean failJoinOnAllNodes) throws Exception {
+    protected void clusterCannotFormWithFailingJoinValidation(boolean failJoinOnAllNodes) {
         try (Cluster cluster = new Cluster(randomIntBetween(1, 5))) {
             List<ClusterNode> clusterNodesToFailJoin;
             if (failJoinOnAllNodes) {
@@ -1586,11 +1617,11 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
 
         @Override
         public TransportVersion getMinimalSupportedVersion() {
-            return TransportVersions.ZERO;
+            return TransportVersion.zero();
         }
 
         @Override
-        public void writeTo(StreamOutput out) throws IOException {
+        public void writeTo(StreamOutput out) {
             throw new ElasticsearchException(EXCEPTION_MESSAGE);
         }
 
@@ -1705,9 +1736,9 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
                                 .toList();
                             assertThat(matchingNodes, hasSize(1));
 
-                            assertTrue(message, Regex.simpleMatch(discoveryMessageFn.apply(matchingNodes.get(0).toString()), message));
+                            assertTrue(message, Regex.simpleMatch(discoveryMessageFn.apply(matchingNodes.getFirst().toString()), message));
 
-                            nodesLogged.add(matchingNodes.get(0).getLocalNode());
+                            nodesLogged.add(matchingNodes.getFirst().getLocalNode());
                         }
 
                         @Override
@@ -1762,7 +1793,13 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
                         @Override
                         public void match(LogEvent event) {
                             final String message = event.getMessage().getFormattedMessage();
-                            assertThat(message, startsWith("This node is a fully-formed single-node cluster with cluster UUID"));
+                            assertThat(
+                                message,
+                                allOf(
+                                    startsWith("This node is a fully-formed single-node cluster with cluster UUID"),
+                                    containsString(ReferenceDocs.FORMING_SINGLE_NODE_CLUSTERS.toString())
+                                )
+                            );
                             loggedClusterUuid = (String) event.getMessage().getParameters()[0];
                         }
 
@@ -1793,7 +1830,18 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             + "org.elasticsearch.cluster.coordination.Coordinator.CoordinatorPublication:INFO"
     )
     public void testLogsMessagesIfPublicationDelayed() {
-        try (Cluster cluster = new Cluster(between(3, 5))) {
+        try (
+            Cluster cluster = new Cluster(
+                between(3, 5),
+                true,
+                Settings.builder()
+                    .put(
+                        LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING.getKey(),
+                        TimeValue.timeValueMillis(defaultMillis(LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING))
+                    )
+                    .build()
+            )
+        ) {
             cluster.runRandomly();
             cluster.stabilise();
             final ClusterNode brokenNode = cluster.getAnyNodeExcept(cluster.getAnyLeader());
@@ -1868,12 +1916,11 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
                 );
                 cluster.getAnyLeader().submitValue(randomLong());
                 cluster.runFor(
-                    defaultMillis(PUBLISH_TIMEOUT_SETTING) + 2 * DEFAULT_DELAY_VARIABILITY + defaultMillis(
-                        LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING
-                    ) + DEFAULT_DELAY_VARIABILITY + 2 * DEFAULT_DELAY_VARIABILITY,
+                    DEFAULT_CLUSTER_STATE_UPDATE_DELAY + defaultMillis(PUBLISH_TIMEOUT_SETTING) + 2 * DEFAULT_DELAY_VARIABILITY
+                        + defaultMillis(LagDetector.CLUSTER_FOLLOWER_LAG_TIMEOUT_SETTING) + DEFAULT_DELAY_VARIABILITY + 2
+                            * DEFAULT_DELAY_VARIABILITY,
                     "waiting for messages to be emitted"
                 );
-
                 mockLog.assertAllExpectationsMatched();
             }
         }
@@ -2047,7 +2094,15 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
                     + 4 * DEFAULT_DELAY_VARIABILITY
                     // Then a commit of the new leader's first cluster state
                     + DEFAULT_CLUSTER_STATE_UPDATE_DELAY
-                    // Then the remaining node may join
+                    // Then the remaining node may experience a disconnect (see comment in PeerFinder#closePeers) for which it is
+                    // removed from the cluster, and its fault detection must also detect its removal
+                    + Math.max(
+                        DEFAULT_CLUSTER_STATE_UPDATE_DELAY,
+                        defaultMillis(LEADER_CHECK_TIMEOUT_SETTING) * LEADER_CHECK_RETRY_COUNT_SETTING.get(Settings.EMPTY)
+                    )
+                    // then it does another round of discovery
+                    + defaultMillis(DISCOVERY_FIND_PEERS_INTERVAL_SETTING)
+                    // and finally it joins the master
                     + DEFAULT_CLUSTER_STATE_UPDATE_DELAY
             );
 
@@ -2073,6 +2128,28 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             leader.blackhole();
             cluster.stabilise();
             delayedActions.clear();
+        }
+    }
+
+    public void testGetClusterFormationStateDoesNotBlockOnMutex() {
+        try (Cluster cluster = new Cluster(1)) {
+            cluster.runRandomly();
+            final Coordinator coordinator = cluster.getAnyNode().coordinator;
+            final CyclicBarrier barrier = new CyclicBarrier(2);
+
+            runInParallel(() -> {
+                // Thread 0: acquire mutex and block
+                synchronized (coordinator.mutex) {
+                    safeAwait(barrier);
+                    safeAwait(barrier);
+                }
+            }, () -> {
+                // Thread 1: expect getClusterFormationState to run without needing the mutex
+                safeAwait(barrier);
+                ClusterFormationFailureHelper.ClusterFormationState state = coordinator.getClusterFormationState();
+                assertNotNull(state);
+                safeAwait(barrier);
+            });
         }
     }
 
